Concurrent containers for user threads