@@ -6,7 +6,6 @@ import mavmi.telegram_bot.lib.telegram_bot_starter.userThread.UserThreads;
 import mavmi.telegram_bot.lib.user_cache_starter.provider.UserCachesProvider;
 import mavmi.telegram_bot.water_stuff.mapper.RequestsMapper;
 import mavmi.telegram_bot.water_stuff.service.waterStuff.WaterService;
-import mavmi.telegram_bot.water_stuff.telegramBot.client.WaterTelegramBotSender;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -16,7 +15,6 @@ public class WaterStuffUserThreads extends UserThreads<WaterStuffUserThread> {
     private final UserCachesProvider userCachesProvider;
     private final RequestsMapper requestsMapper;
     private final WaterService waterStuffService;
-    private final WaterTelegramBotSender sender;
 
     @Override
     public void add(Update update) {
@@ -30,10 +28,10 @@ public class WaterStuffUserThreads extends UserThreads<WaterStuffUserThread> {
         WaterStuffUserThread userThread = (WaterStuffUserThread) tgIdToUserThread.get(chatId);
 
         if (userThread == null) {
-            userThread = new WaterStuffUserThread(this, userCachesProvider, requestsMapper, waterStuffService, sender, chatId);
+            userThread = new WaterStuffUserThread(this, userCachesProvider, requestsMapper, waterStuffService, chatId);
             tgIdToUserThread.put(chatId, userThread);
             userThread.add(update);
-            new Thread(userThread).start();
+            Thread.ofVirtual().start(userThread);
         } else {
             userThread.add(update);
         }
